# Physical-AI-Humanoid-Robotics-Textbook

./: docusaurus.config.js
history/prompts/1-docusaurus-book/: 001-docusaurus-book-project-implementation-plan.plan.prompt.md  002-docusaurus-book-project-tasks-generation.tasks.prompt.md
history/prompts/docusaurus-book/: 1-create-docusaurus-book-spec.spec.prompt.md  2-create-docusaurus-book-spec-file-based.spec.prompt.md
history/prompts/general/: 1-implement-command-prerequisite-check-failure.general.prompt.md  1-write-robotics-chapter-2-part-1.misc.prompt.md  2-write-robotics-chapter-3.misc.prompt.md  3-write-robotics-chapter-4.misc.prompt.md  4-write-robotics-chapter-5.misc.prompt.md  5-write-robotics-chapter-6.misc.prompt.md
rag-chatbot/: chatbot.py  main.py  pyproject.toml  requirements.txt  web.py
specs/1-docusaurus-book/: plan.md  spec.md  tasks.md
specs/1-docusaurus-book/checklists/: requirements.md
src/components/Chatbot/: ChatbotIcon.js  index.js  styles.module.css
